Updating HTML and CSS File as required by Reviewer

--- a/index.html
+++ b/index.html
@@ -17,17 +17,16 @@
                 <span></span>
                 <span></span>
             </div>
-
             <nav class="mobile-nav">
-<ul class="ul">
-    <li class="li"><a href="about.html" class="a">About</a></li>
-    <li class="li"><a href="#program.html" class="a">Program</a></li>
-    <li class="li"><a href="sponsor.html" class="a">Sponsor</a></li>
-    <li class="li"><a href="" class="a">New</a></li>
-    <li class="li"><a href="" class="a">Join</a></li>
-    <li class="li li-cc"><a class="a a-cc" href="">TMS Campaign</a></li>
-</ul>
-<div class="closeBtn">X</div>
+              <ul class="ul">
+                <li class="li"><a class="a" href="index.html">Home</a></li>
+                <li class="li"><a class="a" href="#program">Program</a></li>
+                <li class="li"><a class="a" href="#sponsor">Sponsor</a></li>
+                <li class="li"><a class="a" href="">News</a></li>
+                <li class="li"><a class="a" href="">Join</a></li>
+                <li class="li li-cc"><a class="a a-cc" href="">TMS Campaign</a></li>
+              </ul>
+              <div class="closeBtn">X</div>
             </nav>
 
             <nav class="desktop-nav">
