Updating HTML and CSS File as required by Reviewer

--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
     <div class="header-section1-container">
         <!-- header -->
         <header class="header">
-            <div class="humburger">
+            <div class="hamburger">
                 <span></span>
                 <span></span>
                 <span></span>
             </div>
             <nav class="mobile-nav">
               <ul class="ul">
-                <li class="li"><a class="a" href="index.html">Home</a></li>
+                <li class="li"><a class="a" href="about.html">About</a></li>
                 <li class="li"><a class="a" href="#program">Program</a></li>
                 <li class="li"><a class="a" href="#sponsor">Sponsor</a></li>
                 <li class="li"><a class="a" href="">News</a></li>
